# IoT-trabalho

./: .gitignore  A606_2020-01-.csv  A607_2020-01-.csv  A621_2020-01-.csv  README.md  graficos - novas estacoes (um so receptor).ipynb  graficos.ipynb  graficos_separados.ipynb  inmet_api.py  opiniao.py  pre_proc.ipynb  pyproject.toml  teste_ana.ipynb
dados/: A606_2019-10.csv  A606_2019-11.csv  A606_2019-12.csv  A606_2020-02.csv  A606_2020-03.csv  A606_2020-04.csv  A606_2020-05.csv  A606_2020-06.csv  A606_2020-07.csv  A606_2020-08.csv  A606_2020-09.csv  A607_2019-10.csv  A607_2019-11.csv  A607_2019-12.csv  A607_2020-02.csv  A607_2020-03.csv  A607_2020-04.csv  A607_2020-05.csv  A607_2020-06.csv  A607_2020-07.csv  A607_2020-08.csv  A607_2020-09.csv  A609_2019-10.csv  A609_2019-11.csv  A609_2019-12.csv  A609_2020-01.csv  A609_2020-02.csv  A609_2020-03.csv  A609_2020-04.csv  A609_2020-05.csv  A609_2020-06.csv  A609_2020-07.csv  A609_2020-08.csv  A609_2020-09.csv  A618_2019-10.csv  A618_2019-11.csv  A618_2019-12.csv  A618_2020-01.csv  A618_2020-02.csv  A618_2020-03.csv  (+17 more)
dados_csv/: anomalia.csv.bkp  anomalia_1.csv  anomalia_9est.csv  anomalia_ES.csv  anomalia_RJ.csv  anomalia_RS.csv  anomalia_SC.csv  anomalia_new.csv  crenca.csv.bkp  crenca_1.csv  crenca_9est.csv  crenca_ES.csv  crenca_PN.csv  crenca_RJ.csv  crenca_RS.csv  crenca_SC.csv  crenca_new.csv  descrenca.csv  descrenca_1.csv  descrenca_2.csv  descrenca_9est.csv  descrenca_ES.csv  descrenca_RJ.csv  descrenca_RS.csv  descrenca_SC.csv  descrenca_new.csv  frentes_frias_1-rRS.csv  frentes_frias_1-rTot.csv  incerteza.csv.bkp  (+26 more)
(+33 files in other folders)
