[tool.poetry]
name = "iot_trabalho"
version = "0.0.1"
description = "Trabalho da matéria de Internet das Coisas do PESC-UFRJ no período 2020.1 com o professor Cláudio Miceli"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
simpy = "^4.0.1"
termcolor = "^1.1.0"
pandas = "^1.1.3"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"
numpy = "^1.19.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
mypy = "^0.790"
black = "^20.8b1"
data-science-types = {git = "https://github.com/predictive-analytics-lab/data-science-types"}

[tool.poetry.scripts]
iot_trabalho = "iot_trabalho.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


